Refactor CSS styles and add new rules

--- a/style.css
+++ b/style.css
@@ -8,7 +8,11 @@
     width: 80%;
     margin: auto;
 }
-
+body{
+  font-family: "Sansita", sans-serif;
+  font-weight: 700;
+  font-style: italic;
+}
 header {
     background-color: #030915;
 }
@@ -464,5 +468,6 @@ nav a {
         margin-right: 20px;
     }
     
+
 
 }
