--- a/style.css
+++ b/style.css
@@ -138,7 +138,18 @@ nav a {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
 }
-
+.img2:hover{
+  transform: scale(1.1,1.1); 
+}
+.img3:hover{
+  transform: scale(1.1,1.1); 
+}
+.img4:hover{
+  transform: scale(1.1,1.1); 
+}
+.img5:hover{
+  transform: scale(1.1,1.1); 
+}
 .banner {
     position: relative;
     display: flex;
@@ -471,3 +482,4 @@ nav a {
 
 
 }
+
